<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030">


    <ImageView
        android:id="@+id/settings_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:contentDescription="@string/settings_button_label"
        android:focusable="true"
        android:src="@drawable/settings_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/main_title"
        android:textColor="@color/bright_green"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_image"/>


    <TextView
        android:id="@+id/morze_output_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/dim_green"
        android:padding="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/output_morze"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintWidth="wrap_content"
        app:layout_constraintWidth_max="wrap"
        app:layout_constraintWidth_min="wrap"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/input_field"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:background="@color/dim_green"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintHeight="60dp"
        app:layout_constraintWidth="wrap_content"
        app:layout_constraintWidth_max="wrap"
        app:layout_constraintWidth_min="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/morze_output_field"
        app:layout_constraintBottom_toTopOf="@id/sendButton" />


    <Button
        android:id="@+id/sendButton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/bright_green"
        android:clickable="true"
        android:contentDescription="@string/send_button_label"
        android:layout_marginBottom="100dp"
        android:focusable="true"
        android:text="@string/send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>