<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#303030">

    <ImageView
        android:id="@+id/back_button_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:contentDescription="@string/back_button_desc"
        android:focusable="true"
        android:src="@drawable/back_button_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textColor="@color/bright_green"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button_image" />

    <TextView
        android:id="@+id/device_title"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="80dp"
        android:text="@string/bluetooth_device_name"
        android:textColor="@color/bright_green"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/back_button_image"
        app:layout_constraintTop_toBottomOf="@id/settings" />

    <EditText
        android:id="@+id/bluetooth_device_name"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:background="@color/dim_green"
        app:layout_constraintTop_toBottomOf="@id/device_title"
        app:layout_constraintStart_toStartOf="@id/device_title"/>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/bright_green"
        android:text="@string/save"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bluetooth_device_name"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>